# PicoScheme

./: CMakeLists.txt  readme.md
src/: CMakeLists.txt  clock.cpp  gc.cpp  main.cpp  parser.cpp  picoscheme.hpp  platform.hpp  port.hpp  primop.cpp  scheme.hpp  scheme_export.hpp  streamop.cpp  streamop.hpp  types.hpp
